--- a/shopeame/src/app/pages/home/home.component.scss
+++ b/shopeame/src/app/pages/home/home.component.scss
@@ -1,7 +1,8 @@
 .outerBox {
   background-color: white;
-  display: flex;
   position: relative;
+
+  display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   gap: 25px;
@@ -12,13 +13,12 @@
   font-size: medium;
   padding: 50px;
   margin-top: 50px;
-  margin-bottom: 100px;
-  height: auto;
-  width: fit-content;
+  height: max-content;
 
 
   h2 {
     text-align: center;
+    position: relative;
     // color : red;
   }
 
@@ -31,7 +31,6 @@
     p{
         text-align: justify;
         width: fit-content;
-
     }
   }
 }
