--- a/shopeame/src/app/core/footer/footer.component.scss
+++ b/shopeame/src/app/core/footer/footer.component.scss
@@ -1,7 +1,12 @@
 footer {
-  margin-top: 30px;
+  position: relative;
+  bottom: 0px;
+  z-index: 1;
+  top: 100%;
+  margin-top: 300px;
+  width: 100%;
+  left: 0;
   padding: 15px;
-  width:100%;
   max-height: fit-content;
   background-color: #333333;
   text-align: center;
@@ -14,6 +19,7 @@ footer {
 
     ul {
       display: flex;
+      flex-wrap: wrap;
       gap: 20px ;
       justify-content: center;
       margin-top: 10px;
