--- a/shopeame/src/app/core/nav/nav.component.html
+++ b/shopeame/src/app/core/nav/nav.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <nav>
     <div class="nav_izq">
       <div class="nav_izq_ul">
@@ -26,5 +26,48 @@
       </div>
 
     </div>
+  </nav>
+</header> -->
+
+
+
+
+
+
+
+
+
+
+<header class="header">
+  <h1 class="header__h1">
+      <img src=" ./assets/images/flex-logo.png" alt="logo"class="header__img">
+  </h1>
+
+  <button 
+      (click)=" setActive() "
+      class="header__button">
+      <svg class="header__svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+  </button>
+
+  <nav 
+      class="header__nav"
+      [ngClass]="{ 'header__nav--activo' : active }">
+      <ul class="header__ul">
+          <li class="header__li"><a routerLink="" class="header__a">Home</a></li>
+          <li class="header__li"><a routerLink="productos" class="header__a">Productos</a></li>
+          <li class="header__li"><a routerLink="gestion" *ngIf="hayUser" class="header__a">Gestion</a></li>
+<li class="header__li">
+            <div  *ngIf="!hayUser" [routerLink]="'login'">
+              <img class="nav__img" src="./assets/images/usuario.png" routerLink="login#" alt="usuario" />
+            </div>
+</li>
+<li class="header__li">
+            <div *ngIf="hayUser" [routerLink]="'logout'">
+              <img class="nav__img"src="./assets/images/logout.png">
+            </div>
+</li>
+      </ul>
   </nav>
 </header>
