--- a/shopeame/src/app/components/producto/producto.component.scss
+++ b/shopeame/src/app/components/producto/producto.component.scss
@@ -1,42 +1,92 @@
 .producto {
-    margin-top: 40px;
-    ul {
-  
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: center;
-      
-        li {
-          background-color: white;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          align-items: center;
-          padding: 20px;
-          border: 1px solid black;
-          width: 250px;
-          min-height: 300px;
-      
-          .product-btn {
-            margin-bottom: 25px;
-          }
-      
-          img {
-            width: 100%;
-          }
-      
-          &:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          }
-        }
+  margin-top: 40px;
+
+  ul {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    
+
+    li {
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      border: 1px solid black;
+      width: 50vh;
+      height: 90vh;
+      border-radius: 20px;
+
+      img {
+        width: 80%;
+        height: 75%;
+        margin:1%;
+      }
+
+      &:hover {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+      .product-id{
+        font-size: 25px;
+      }
+
+      //Nombre P
+      .product-name{
+        font-size: 25px;
+        text-transform: capitalize;
+      }
+    
+
+      //Boton Compra
+      .btn-compra{
+        margin:1vh;
       }
       
+      a{
+        display: block;
+        width: 200px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 18px;
+        font-family: sans-serif;
+        text-decoration: none;
+        color: #333;
+        border: 2px solid #333;
+        letter-spacing: 2px;
+        text-align: center;
+        position: relative;
+        transition: all .35s;
+      }
+      
+      a span{
+        position: relative;
+        z-index: 2;
+      }
+      
+      a:after{
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        background: #4bb6b7;
+        transition: all .35s;
+      }
+      
+      a:hover{
+        color: #fff;
+      }
+      
+      a:hover:after{
+        width: 100%;
+      }
 
-
-
-
+    }
+  }
 
 }
-
